--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "ng-zorro-antd": "^9.1.0",
     "rxjs": "~6.5.4",
+    "tachyons": "^4.12.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
